# just-links

./: .firebaserc  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  all.compose.yaml  compose.yaml  docker-compose.yaml  firebase.json
.circleci/: config.yml
.github/workflows/: deploy-app-server.yml  deploy-web.yml  google-cloudrun-docker.yml
app-server/: Cargo.toml  Dockerfile  api-gateway-specs.yaml
app-server/.sqlx/: query-237b02450d2a9addb0e03c43d1f64c615b822d09ff0ab165ccebee678133f208.json  query-426beda2e10ec77b2b38f44371fe85a4f0c4022c782fdfa053fbb3c7029cefb9.json  query-4b86967ba1896f347417d8e5944e5dbc6b84001bbc1169c730e13252b7f5889f.json  query-6e0f5b4abb5247e5f56268cfaa266cc9a7af8e85b75d6bd97d1bc9dd720c9bf3.json  query-7faebb8888bbf471c00ef1aed4880691306bb3859ae94f88e4d72a0d657f0ce4.json  query-91be2a913d6e300cdb67df9ffb67f98a2b196175a4e06e6cdb5f4788d28764f9.json  query-dd9be1a4969c51a5538f3880b78a1c6b8a5b6e9629844f8e5b3f3c0b938871e4.json
app-server/migrations/: 202310071226_init.sql  202310071929_timestampz.sql  202310132114_replace_varchars.sql
app-server/src/: db.rs  domain.rs  error.rs  lib.rs  main.rs  oauth.rs  session.rs
app-server/src/api/: articles.rs  auth.rs  mod.rs
server/: .rustfmt.toml  Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: mod.rs
web/: eslint.config.cjs  package.json  pnpm-lock.yaml  prettier.config.cjs  svelte.config.js  tailwind.config.cjs
web/src/: app.d.ts  app.html  env.d.ts  error.html  hooks.server.ts  service-worker.js  service-worker.ts  types.d.ts
web/src/lib/: api.ts  store.ts  syncArticlesMachine.ts  types.ts  utils.ts
web/src/lib/components/: ArticleCard.svelte  Articles.svelte  PageHeader.svelte  SignUpButton.svelte  SiteFooter.svelte  SiteHeader.svelte
web/src/lib/icons/: Options.svelte
web/src/params/: isNumeric.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  LandingPage.svelte  api.ts  schemas.ts
web/src/routes/[[slug=isNumeric]]/: +page.server.ts  +page.svelte  ArticleCard.svelte  LandingPage.svelte
web/src/routes/[slug=isNumeric]/: +page.server.ts  +page.svelte  +page.ts  Articles.svelte  Pagination.svelte
web/src/routes/login/: +page.svelte
web/src/routes/options/: +page.server.ts  +page.svelte  Section.svelte
web/src/routes/settings/: +page.server.ts  +page.svelte  Divider.svelte
web/static/: index.html
