[package]
name = "app-server"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nanoid = "0.4"
dotenvy = "0.15"
rand = "0.8"
futures = "0.3"
time = "0.3"
base64 = "0.21"
sha3 = "0.10"

axum = { version = "0.6", features = ["headers", "macros"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "timeout", "trace"] }
async-session = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
biscuit = "0.6"
redis = "0.23"

pockety = { path = "../../pockety/pockety" }
bb8 = "0.8.1"
bb8-redis = "0.13.1"
async-trait = "0.1.73"

