[package]
name = "app-server"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
nanoid = "0.4"
dotenvy = "0.15"
rand = "0.8"
futures = "0.3"
time = "0.3"
base64 = "0.21"
base64ct = { version = "1.6", features = ["alloc"] }
sha3 = "0.10"
async-trait = "0.1"
chrono = "0.4"

axum = { version = "0.6", features = ["headers", "macros"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
biscuit = "0.6"
redis = { version = "0.23", features = ["tokio-comp"] }
bb8 = "0.8"
bb8-redis = "0.13"

pockety = { git = "https://github.com/DrPoppyseed/pockety.git" }
